fix: item size on mobile devices

--- a/src/components-css/viewproduct.css
+++ b/src/components-css/viewproduct.css
@@ -67,7 +67,7 @@
     }
 }
 
-@media screen and (min-width:250px) and (max-width:640px){
+@media screen and (max-width:640px){
     .details-container{
         display: flex;
         flex-direction: column;
@@ -87,10 +87,7 @@
        
     }
     .related-items{
-        /* margin-top: 70rem; */
         padding-inline: 7%;
-        display: flex;
-        flex-direction: column;
         align-items: center;
     }
 }
